<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_and_time" />
    <string name="location" />
    <string name="event_description" />
    <string name="organizer_information" />
    <string name="register_or_rsvp" />
    <string name="event_name" />
    <string name="user_account">Profile</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="phone_hint">Phone Number</string>
    <string name="address_hint">Address</string>
    <string name="description_hint">Description</string>
    <string name="password_hint">Password</string>
    <string name="create_text">Register</string>
    <string name="login_text">Login</string>
    <string name="eventName">Event Name</string>
    <string name="todo">TODO</string>
    <string name="share_event">share event</string>
    <string name="register">Register</string>
    <string name="like_the_event">Like the event</string>
    <string name="dateandtime">Date and Time</string>
    <string name="eventlocation">Location</string>
    <string name="eventdescription">Event Description</string>
</resources>