<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".EventDetailPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventName"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_placeholder_picture_foreground"
                android:contentDescription="@string/todo" />

            <!-- Date and Time -->
            <TextView
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateandtime"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <!-- Location -->
            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventlocation"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <!-- Event Description -->

            <!-- Organizer Information -->
            <TextView
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/eventdescription"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="18sp" />

            <!-- Register or RSVP Button -->

            <Button
                android:id="@+id/like_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/like_the_event" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/register" />

            <Button
                android:id="@+id/share_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/share_event" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>