<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="Create new account"
        android:textSize="20sp"
        android:textColor="@color/darkGray"
        android:padding="16dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@mipmap/ic_app_logo"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_input"
            android:maxLines="1" />

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_input"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_input"
            android:maxLines="1" />

        <Button
            android:id="@+id/create_acct_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@color/purple_200"
            android:text="@string/create_text"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>