<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/account_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibtn_profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/avatar_1"
                    android:contentDescription="Avatar" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="302dp"
                    android:background="@mipmap/ic_app_logo" />
            </FrameLayout>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_input"
                android:maxLines="1" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_input"
                android:maxLines="1" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_input"
                android:maxLines="1" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/address_hint"
                android:inputType="text"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_input"
                android:maxLines="1" />

            <TextView
                android:id="@+id/description_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:paddingBottom="5dp"
                android:text="Description "
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_input"/>

            <EditText
                android:id="@+id/Description_input"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:gravity="top"
                android:inputType="text|textMultiLine"
                android:paddingHorizontal="10dp"
                android:textSize="15sp"
                android:textColor="@color/text_dark" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/purple_200"
                android:text="Update"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_top"
                android:background="@color/purple_200"
                android:text="Cancel"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>